--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:wiremock": "ng serve -c wiremock",
+    "start:with-mock": "start-server-and-test wiremock http://localhost:8080 start:wiremock",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint",
+    "prettier": "prettier --write \"src/**/*.{ts, html, scss}\"",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -15,25 +20,40 @@
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/localize": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "bootstrap": "^4.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.17",
+    "@angular-devkit/architect": "^0.1400.1",
+    "@angular-eslint/builder": "^13.4.0",
+    "@angular-eslint/eslint-plugin": "^13.4.0",
+    "@angular-eslint/eslint-plugin-template": "^13.4.0",
+    "@angular-eslint/template-parser": "^13.4.0",
     "@angular/cli": "~12.2.17",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.3.2",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "husky": "^8.0.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "prettier": "2.6.2",
+    "start-server-and-test": "^1.14.0",
     "typescript": "~4.3.5"
   }
 }
