--- a/angular.json
+++ b/angular.json
@@ -52,6 +52,20 @@
               ],
               "outputHashing": "all"
             },
+            "wiremock": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.mock.ts"
+                }
+              ]
+            },
             "development": {
               "buildOptimizer": false,
               "optimization": false,
@@ -74,6 +88,9 @@
           "configurations": {
             "production": {
               "browserTarget": "barreto-front:build:production"
+            },
+            "wiremock": {
+              "browserTarget": "barreto-front:build:wiremock"
             },
             "development": {
               "browserTarget": "barreto-front:build:development"
