--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~12.2.13",
     "@angular-devkit/architect": "^0.1400.1",
     "@angular-eslint/builder": "^13.4.0",
     "@angular-eslint/eslint-plugin": "^13.4.0",
