--- a/miscellaneous/wiremock/docker-compose.wiremock.yml
+++ b/miscellaneous/wiremock/docker-compose.wiremock.yml
@@ -3,7 +3,7 @@ services:
   wiremock:
     ports:
       - '8080:8080'
-    command: --enable-browser-proxying --trust-proxy-target localhost
+    command: --enable-browser-proxying --trust-proxy-target localhost --enable-stub-cors
     container_name: wiremock
     volumes:
       - './:/home/wiremock'
