Minor directory refectory + delete function created

--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
-    "@ng-bootstrap/ng-bootstrap": "12.1.2",
-    "bootstrap": "5.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "bootstrap": "^4.5.0",
+    "bootstrap-icons": "^1.8.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.13",
     "@angular-devkit/architect": "^0.1400.1",
+    "@angular-devkit/build-angular": "~12.2.13",
     "@angular-eslint/builder": "^13.4.0",
     "@angular-eslint/eslint-plugin": "^13.4.0",
     "@angular-eslint/eslint-plugin-template": "^13.4.0",
