--- a/angular.json
+++ b/angular.json
@@ -85,6 +85,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "port": 4200
+          },
           "configurations": {
             "production": {
               "browserTarget": "barreto-front:build:production"
