--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "start:wiremock": "ng serve -c wiremock",
     "start:with-mock": "start-server-and-test wiremock http://localhost:8080 start:wiremock",
     "build": "ng build --configuration=production",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
     "lint": "ng lint",
     "prettier": "prettier --write \"src/**/*.{ts, html, scss}\"",
     "prepare": "husky install",
@@ -30,6 +28,8 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.0",
     "bootstrap-icons": "^1.8.3",
+    "date-fns": "^2.28.0",
+    "ngx-mask": "12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
